<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PoseIt</string>
    <string name="button_poseIt">Pose It!</string>
    <string name="action_settings">Settings</string>
    <string name="textArea_prompt">Pose your question here...</string>
    <string name="textview_userid">Not Signed In</string>
    <string name="button_signIn">Sign In</string>
    <string name="toast_no_google_account_selected">No Google Account Selected</string>
    <string name="toast_exception_checking_authorization">Exception checking authorization</string>
    <string name="toast_no_google_accounts_registered">No Google Accounts Registered</string>
    <string name="toast_only_one_google_account_registered">Your only registered Google account was selected</string>
    <string name="auth_pending">pending...</string>
    <string name="select_account"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_voting">VotingActivity</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="pose_selection_prompt">Make a Selection to Vote!</string>

</resources>
