<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/email_address_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_userid" />

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:text="@string/button_signIn"
            android:onClick="onClickSignIn"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:background="#000000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textArea_prompt"
        android:id="@+id/textView"
        android:layout_weight="0.40"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_poseIt"
        android:id="@+id/btnPoseIt"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickPoseIt" />
</LinearLayout>