<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/poseView"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/pose_selection_prompt"
        android:gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_yes"
            android:id="@+id/btnYes"
            android:layout_marginRight="@dimen/standard_button_margin"
            android:enabled="true" />

        <Button
            android:layout_width="@dimen/standard_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_no"
            android:id="@+id/btnNo"
            android:layout_marginLeft="@dimen/standard_button_margin"
            android:enabled="true" />
    </LinearLayout>

</LinearLayout>